# my-archlinux-installer

./: .gitignore  .gitmodules  Cargo.toml  README.md  chroot_install.sh  config.sh  decrypt_and_mount.sh  dev_config.sh  dev_utils.sh  gitconfig  install.sh  make_archiso.sh  ss-config.json  ss-local.service  utils.sh  vscode.json  x.sh
res/: config.toml  gitconfig  vscode.json  zshrc
res/backup/: config.sh  save.sh
src/: config.rs  constants.rs  errors.rs  install.rs  lib.rs  live_cd.rs  log.rs  main.rs  utils.rs
src/chroot_install/: mod.rs  package_configurator.rs
src/config/: mod.rs  partitions.rs  toml.rs  validator.rs
src/stage2_chroot_install/: mod.rs  stage2_package_configurator.rs
src/utils/: command.rs  mod.rs  partitions.rs
