[package]
authors = ["GeorgeAverkin <nrg3125@gmail.com>"]
edition = "2018"
name = "rust-archlinux-installer"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snafu = "0.7.0"
clap = { version = "3.1.6", features = ["derive"] }
gptman = "0.8.3"
log = "0.4.14"
log4rs = "1.0.0"
serde = { version = "1.0.119", features = ["derive"] }
toml = "0.5.8"
uuid = { version = "0.8.2", features = ["v4"] }

[[bin]]
name = "cli"
path = "src/main.rs"
